name:               ElixirFM-Exec-ElixirFM
version:            0.9
license:            GPL
license-file:       ../LICENSE
copyright:          2007
author:             Otakar Smrz
maintainer:         otakar.smrz mff.cuni.cz
homepage:           http://ufal.mff.cuni.cz/~smrz/
package-url:        http://sourceforge.net/projects/elixir-fm/
category:           Various
build-depends:      Cabal, base, mtl
synopsis:           ElixirFM from UTF8
description:        The "ElixirFM" library provides a unified interface for
                    converting strings from different encodings into a common
                    representation, and vice versa. It defines the
                    'ElixirFM.Encoding' type class, whose methods include
                    'encode' and 'decode'.
                    .
                    The "ElixirFM\/Main.hs" and "Decode\/Main.hs" programs
                    mimick the fuction calls to 'encode' and 'decode',
                    respectively, with the following command-line synopsis:
                    .
                    >  $ decode ArabTeX < decode.d | encode Buckwalter > encode.d
                    >
                    >  $ decode MacArabic < data.MacArabic > data.UTF8
                    >
                    >  $ encode WinArabic < data.UTF8 > data.WinArabic
                    .
                    The installation instructions are given in "INSTALL".
                    For the list of supported encoding schemes, please refer
                    to "ElixirFM" and the source files of the programs. The
                    naming of encodings is /case-insensitive/ and some
                    options are allowed:
                    .
                    >  encode.exe [OPTIONS] encoding
                    >    -h       --help         show usage information
                    >    -l       --lines        use line-oriented mode
                    >    -p text  --prefix=text  prefix input with text
                    >    -s text  --suffix=text  suffix input with text
                    >    -v       --version      show program's version
                    .
                    This software is published under the /GNU General Public
                    License/. Note the copyright and license details in the
                    headers of the files, and see "LICENSE" distributed with
                    this package.
                    .
                    "ElixirFM" <http://ufal.mff.cuni.cz/~smrz/ElixirFM/doc/html/>
hs-source-dirs:     ., .., ../..
exposed-modules:    Main
extensions:         MultiParamTypeClasses,
                    FunctionalDependencies,
                    ExistentialQuantification
