name:               ElixirFM-Exec-Resolve
version:            1.1
license:            GPL
license-file:       ../LICENSE
copyright:          2008
author:             Otakar Smrz
maintainer:         otakar.smrz mff.cuni.cz
homepage:           http://ufal.mff.cuni.cz/~smrz/
package-url:        http://sourceforge.net/projects/elixir-fm/
category:           Various
build-depends:      Encode, Cabal, base, containers, wl-pprint
synopsis:           Functional Arabic Morphology
description:        The "ElixirFM" library implements a computational model of the morphological
                    processes in Arabic. Both the library and the model have been designed by
                    Otakar Smr&#382; and are described in his PhD thesis
                    /Functional Arabic Morphology. Formal System and Implementation/,
                    Charles University in Prague, July 2007,
                    <http://ufal.mff.cuni.cz/~smrz/elixir-thesis.pdf>.
                    The complete project is hosted on <http://sourceforge.net/projects/elixir-fm/>
                    and the code is documented on <http://ufal.mff.cuni.cz/~smrz/ElixirFM/>.
                    .
                    /ElixirFM/ is inspired by and can directly extend the /Functional Morphology/
                    library developed by Markus Forsberg in his licenciate thesis
                    /Applications of Functional Programming in Processing Formal and Natural Languages/,
                    G&#246;teborg University and Chalmers University of Technology,
                    December 2004, <http://www.cs.chalmers.se/~markus/FM/>.
                    .
                    The "Version" library is just a simple support for
                    working with the CVS\/SVN revision keyword.
                    .
                    "ElixirFM"

executable:         elixir-resolve
main-is:            Exec/Resolve/Main.hs
hs-source-dirs:     ., ../..
ghc-options:        -fglasgow-exts -fallow-overlapping-instances -fallow-undecidable-instances
